# socket_cvMat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SocketAdapter.hpp  doc.drawio  img_msg_wraper.hpp  msg.proto  msg_wraper.hpp
test/: client.cpp  server.cpp
